Bit of extra structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -9,28 +9,40 @@
 
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" href="" />
+    <script src="app.js" defer></script>
   </head>
 
   <body>
+    <nav>
+      <!-- Sticky nav bar that remains at top of screen when scrolling -->
+    </nav>
+
     <header>
       <h1>Title</h1>
     </header>
 
-    <nav></nav>
-
     <main>
-      <section id="top"></section>
+      <section id="top">
+        <!-- Planet display -->
+      </section>
 
-      <section id="middle"></section>
+      <section id="middle">
+      </section>
 
       <section id="bottom">
-        <section id="about"></section>
+        <section id="about">
+        </section>
 
-        <section id="contact"></section>
+        <section id="contact">
+        </section>
+
+        <section id="team">
+          <!-- Gallery of team members -->
+        </section>
       </section>
     </main>
 
-    <footer></footer>
-    <script src="app.js"></script>
+    <footer>
+    </footer>
   </body>
 </html>
