Bit of extra structure HTML and CSS updates and images folder created with img

--- a/index.html
+++ b/index.html
@@ -1,57 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="" />
 
-    <title>PLANETS INNIT</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="" />
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="" />
-    <script src="app.js" defer></script>
-    <script src="experiment.js" defer></script>
-  </head>
+  <title>PLANETS INNIT</title>
 
-  <body>
-    <nav>
-      <!-- Sticky nav bar that remains at top of screen when scrolling -->
-      <ul>
-        <li class="navLink"><a href="#top">Top Section</a></li>
-        <li class="navLink"><a href="#middle">Middle Section</a></li>
-        <li class="navLink"><a href="#bottom">Bottom Section</a></li>
-      </ul>
-    </nav>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="icon" href="" />
+  <script src="app.js" defer></script>
+</head>
 
-    <hr />
+<body>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+    <a href="#team">Team</a>
+    <!-- Sticky nav bar that remains at top of screen when scrolling -->
+  </nav>
 
-    <header>
-      <h1>Title</h1>
-    </header>
-
-    <div>
-      <button id="chaos">
-        <sup class="chaosA">pls</sup>
-        <sub class="chaosB">press</sub>
-        <sup class="chaosA">4</sup>
-        <sub class="chaosB">chaos</sub>
-      </button>
-
-      <button id="scramble">
-        <p>I DISLIKE THE TITLES</p>
-      </button>
-    </div>
+  <header>
+    <h1>Title</h1>
+  </header>
 
     <main>
-      <section id="top" class="pretty noEdge">
+      <section id="top">
         <h2>Top</h2>
-
-        <pre>Image goes here</pre>
-
-        <p>Look! Planet.</p>
+        <img src="images/earth.png" alt="Earth" class="planet">
+        <!-- Planet display -->
       </section>
 
-      <section id="middle" class="ugly noEdge">
+      <section id="middle">
         <h2>Middle</h2>
 
         <p>Middling content</p>
@@ -100,8 +82,8 @@
 
     <hr />
 
-    <footer>
-      <sub>There is no ethical consumption under late stage capitalism</sub>
-    </footer>
-  </body>
+  <footer>
+  </footer>
+</body>
+
 </html>
