--- a/index.html
+++ b/index.html
@@ -23,19 +23,26 @@
   </nav>
 
   <header>
-    <h1>Title</h1>
+    <h1>Welcome to </h1>
   </header>
 
     <main>
       <section id="top">
         <h2>Top</h2>
-        <img src="images/earth.png" alt="Earth" class="planet">
+        <div class="grid">
+          <div class="item">
+            <p>
+
+            </p>
+          </div>
+          <div class="item"><img src="images/earth.png" alt="Earth" class="img"></div>
+          <div class="item"><p></p></div>
+        </div>
         <!-- Planet display -->
       </section>
 
       <section id="middle">
         <h2>Middle</h2>
-
         <p>Middling content</p>
       </section>
 
