--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <nav> <!-- TODO Grid (x: 3, y:1) -->
-    <div id="links"> <!-- TODO Flexbox container -->
+  <nav>
+    <div id="links">
       <div> <!-- TODO Flexbox child -->
         <a href="#home">Home</a>
       </div>
@@ -36,13 +36,13 @@
     <div id="navBuffer">
     </div>
 
-    <div id="planetMenu"><!-- TODO Width: a fixed percentage of the navBar width -->
+    <div id="planetMenu">
       <pre>Dropdown menu</pre>
     </div>
   </nav>
 
   <main>
-    <section id="planet"><!-- TODO Grid container with one row -->
+    <section id="planet">
       <pre>Grid starts here</pre>
 
       <div id="planetInfo1"> <!-- PLANET NAME -->
@@ -99,7 +99,7 @@
 
     <hr/>
 
-    <section id="agency">
+    <section id="agency"> <!-- TODO Flex row -->
       <h2>WhO iS uS</h2>
 
       <section id="about">
@@ -109,7 +109,7 @@
       </section>
 
       <section id="team">
-        <h3>Corporate Shills</h3> <!-- Gallery of team members -->
+        <h3>Corporate Shills</h3><!-- Gallery of team members -->
 
         <div id="gallery">
           <div id="shill1" class="shill">
