Grid alignment for central section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <nav> <!-- TODO Grid (x: 3, y:1) -->
-    <div id="links"> <!-- TODO Flexbox container -->
+  <nav>
+    <div id="links">
       <div> <!-- TODO Flexbox child -->
         <a href="#home">Home</a>
       </div>
@@ -36,55 +36,35 @@
     <div id="navBuffer">
     </div>
 
-    <div id="planetMenu"><!-- TODO Width: a fixed percentage of the navBar width -->
+    <div id="planetMenu">
       <pre>Dropdown menu</pre>
     </div>
   </nav>
 
   <main>
-    <section id="planet"><!-- TODO Grid container with one row -->
-      <pre>Grid starts here</pre>
-
-      <div id="planetInfo1"> <!-- PLANET NAME -->
-        <h2 id="planetName">A PLANET</h2>
-
-        <pre>Planet Box 1</pre>
+    <section id="planet">
+      <div id="agencyName">
+        <h1>Galactic Getaways</h1>
       </div>
 
-      <div id="planetInfo2">
-        <pre>Planet Box 2</pre>
+      <div id="planetEmptyCorner">
       </div>
 
-      <div id="planetInfo3">
-        <pre>Planet Box 3</pre>
+      <div class="planetInfo" id="infoLeft">
+        <pre>Some content</pre>
       </div>
 
-      <div id="planetInfo4">
-        <pre>Planet Box 4</pre>
+      <div id="planetImg">
+        <img alt="Earth" src="images/earth.png"/>
       </div>
 
-      <div id="planetInfo5"> <!-- PLANET PICTURE -->
-        <img id="planetImg" alt="Earth" src="images/earth.png"/>
-        <!-- alt="earth" will need to change with selection -->
+      <div class="planetInfo" id="infoRight">
+        <pre>Some content</pre>
       </div>
 
-      <div id="planetInfo6">
-        <pre>Planet Box 6</pre>
+      <div id="planetName">
+        <h2>Planet</h2>
       </div>
-
-      <div id="planetInfo7">
-        <pre>Planet Box 7</pre>
-      </div>
-
-      <div id="planetInfo8">
-        <pre>Planet Box 8</pre>
-      </div>
-
-      <div id="planetInfo9">
-        <pre>Planet Box 9</pre>
-      </div>
-
-      <pre>Grid ends here</pre>
     </section>
 
     <hr/>
