--- a/index.html
+++ b/index.html
@@ -79,38 +79,32 @@
 
     <hr/>
 
-    <section id="agency">
-      <h2>WhO iS uS</h2>
-
-      <section id="about">
-        <h3>About Our Agency</h3>
-
-        <p>Boring stuff</p>
-      </section>
-
-      <section id="team">
-        <h3>Corporate Shills</h3> <!-- Gallery of team members -->
-
-        <div id="gallery">
-          <div id="shill1" class="shill">
-            <h4>Shill 1</h4>
-            <img class ="teamImages" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.mVmiel7sYbcoFrwOEImRcgHaE8%26pid%3DApi&f=1&ipt=b8e319354c8503ba7c1d955de9779d085478e73f4c75ac71541828a828a235d2&ipo=images" alt="alien" width="300px" height="auto">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti odit, voluptas autem eligendi eveniet inventore laudantium. Earum deleniti voluptatibus distinctio quibusdam, explicabo maxime possimus. Magnam officia mollitia dolor voluptate eum!</p>
-          </div>
-  
-          <div id="shill2" class="shill">
-            <h4>Shill 2</h4>
-            <img class ="teamImages" src="https://img.freepik.com/premium-photo/alien-lawyer-files-lawsuit-against-earth-corporation-copyright-infringement-after-discovering-similar-alien-brand-logo-illustration-generative-ai_850000-13454.jpg" alt="alien" width="300px" height="auto">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nam ad et quod, beatae saepe suscipit fugit accusamus harum rerum quasi asperiores molestias facilis totam esse officia culpa, accusantium praesentium?</p>
-          </div>
-  
-          <div id="shill3" class="shill">
-            <h4>Shill 3</h4>
-            <img class ="teamImages" src="https://th.bing.com/th/id/OIP.x4vz8pKajpbLvj1P_ZmASAHaFi?w=272&h=204&c=7&r=0&o=5&pid=1.7" alt="alien" width="300px" height="auto">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quae, dignissimos laudantium vel tenetur repellendus sint nobis amet dolor ipsa repudiandae fugit temporibus quaerat beatae. Voluptates, libero dolorum! Rem, quaerat.</p>
-          </div>
+    <section id="team">
+      <h2>Meet Your Agents</h2>
+      <div id="strapline">
+        <p>
+          <b>Our highly-trained team of</b> <s>meat</s><b>customer support a</b><s>nimals</s><b>gents</b>
+        </p>
+      </div>
+      <div id="gallery">
+        <div id="teamMember1" class="teamMember">
+          <h4>teamMember 1</h4>
+          <img class ="teamImages" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.mVmiel7sYbcoFrwOEImRcgHaE8%26pid%3DApi&f=1&ipt=b8e319354c8503ba7c1d955de9779d085478e73f4c75ac71541828a828a235d2&ipo=images" alt="alien" width="300px" height="auto">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti odit, voluptas autem eligendi eveniet inventore laudantium. Earum deleniti voluptatibus distinctio quibusdam, explicabo maxime possimus. Magnam officia mollitia dolor voluptate eum!</p>
         </div>
-      </section>
+
+        <div id="teamMember2" class="teamMember">
+          <h4>teamMember 2</h4>
+          <img class ="teamImages" src="https://img.freepik.com/premium-photo/alien-lawyer-files-lawsuit-against-earth-corporation-copyright-infringement-after-discovering-similar-alien-brand-logo-illustration-generative-ai_850000-13454.jpg" alt="alien" width="300px" height="auto">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nam ad et quod, beatae saepe suscipit fugit accusamus harum rerum quasi asperiores molestias facilis totam esse officia culpa, accusantium praesentium?</p>
+        </div>
+
+        <div id="teamMember3" class="teamMember">
+          <h4>teamMember 3</h4>
+          <img class ="teamImages" src="https://th.bing.com/th/id/OIP.x4vz8pKajpbLvj1P_ZmASAHaFi?w=272&h=204&c=7&r=0&o=5&pid=1.7" alt="alien" width="300px" height="auto">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quae, dignissimos laudantium vel tenetur repellendus sint nobis amet dolor ipsa repudiandae fugit temporibus quaerat beatae. Voluptates, libero dolorum! Rem, quaerat.</p>
+        </div>
+      </div>
     </section>
   </main>
 
