--- a/index.html
+++ b/index.html
@@ -147,9 +147,13 @@
             <button>Book Your Getaway</button>
           </div>
         </form>
-
-        <script>
-        </script>
+        
+        <div id="thankYouModal" class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <p id="modalMessage"></p>
+          </div>
+        </div>
       </div>
     </section>
 
