--- a/index.html
+++ b/index.html
@@ -36,20 +36,18 @@
     <div id="navBuffer">
     </div>
 
-    <form id="navPlanetMenu" action="">
-      <input list="planetsNav">
-      <datalist id="planetsNav">
-        <option value="The Sun">
-        <option value="Mercury">
-        <option value="Venus">
-        <option value="Earth">
-        <option value="Mars">
-        <option value="Jupiter">
-        <option value="Saturn">
-        <option value="Neptune">
-        <option value="Uranus">
-      </datalist>
-    </form>
+    <div id="navPlanetMenu">
+      <select name="planets" id="planetsNav">
+        <option value="Mercury">Mercury</option>
+        <option value="Venus">Venus</option>
+        <option value="Earth">Earth</option>
+        <option value="Mars">Mars</option>
+        <option value="Jupiter">Jupiter</option>
+        <option value="Saturn">Saturn</option>
+        <option value="Neptune">Neptune</option>
+        <option value="Uranus">Uranus</option>
+      </select>
+    </div>
   </nav>
 
   <main>
